--- a/package.json
+++ b/package.json
@@ -9,12 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@material-tailwind/react": "^2.1.4",
     "next": "14.0.1",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
-    "react-indiana-drag-scroll": "^2.2.0"
+    "swiper": "^11.0.4"
   },
   "devDependencies": {
     "@types/node": "^20",
