--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
+    "react-use": "^17.4.0",
     "swiper": "^11.0.4"
   },
   "devDependencies": {
