--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
     "next": "14.0.1",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
     "react-use": "^17.4.0",
-    "swiper": "^11.0.4"
+    "swiper": "^11.0.4",
+    "wowjs": "^1.1.3"
   },
   "devDependencies": {
     "@types/node": "^20",
